remove source code in report

--- a/report_submission.tex
+++ b/report_submission.tex
@@ -45,10 +45,10 @@
 }
 
 \setlength{\parskip}{0.5em}
-\title{Image Inpainting from Global Gradient Statistics}
-\author{Chloe (Ching-Yun) Hsu}
+\title{ACM/CS/EE 158, Spring 2017 \\ Project Report \\ Inpainting from Global Image Statistics}
+\author{Chloe (Ching-Yun) Hsu \\ Instructor -- Venkat Chandrasekaran}
 
-\date{May 30, 2017}
+\date{\today}
 
 \begin{document}
 
@@ -294,7 +294,7 @@ It would also be interesting to experiment with other image statistics as featur
 
 \appendix
 
-%\section*{Source Code}
-%\lstinputlisting[language=Python]{inpaint.py}
+\section*{Source Code}
+\lstinputlisting[language=Python]{inpaint.py}
 
 \end{document}
